@@ -1,5 +1,15 @@
 2009-10-17  Ivan Maidanski <ivmai@mail.ru>
 
+	* backgraph.c (SET_OH_BG_PTR): Place outermost parenthesis
+	properly.
+	* darwin_stop_world.c: Replace "if DEBUG_THREADS" with
+	"ifdef DEBUG_THREADS".
+	* pthread_stop_world.c: Ditto.
+	* pthread_support.c: Ditto.
+	* include/gc_inline.h: Guard with GC_INLINE_H.
+
+2009-10-17  Ivan Maidanski <ivmai@mail.ru>
+
 	* alloc.c (GC_copyright): Define as const.
 	* alloc.c (GC_collect_at_heapsize): Replace "static" with "STATIC"
 	(since the name starts with "GC_" prefix).
